#=======================================================================================================================
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
#=======================================================================================================================
cmake_minimum_required(VERSION  3.28)
#=======================================================================================================================
project(cpp-webcam-hw)
#=======================================================================================================================
add_subdirectory(code)
#=======================================================================================================================